# tt2023-dautruongai

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  algo_comparison.txt  benchmark.sh  build_linux.sh  build_linux_debug.sh  build_mac.sh  build_mac_debug.sh  build_pgo_first.sh  build_pgo_second.sh  cross_build_win.sh  map.cpp  mingw-w64-toolchain.cmake  requirements.txt  testlib.h
algo/: hiep1.cpp  hiep2.cpp
algo/babyblue/: heuristic.cpp  heuristic.h  main.cpp  main.h  map.cpp  map.h  minimax.cpp  minimax.h  random.cpp  ship.cpp  ship.h
algo/felina/: AlgoList.h  BabyBlue.cpp  BabyBlue.h  Constants.h  Engine.cpp  Engine.h  Heuristic.cpp  Heuristic.h  MCTS.cpp  MCTS.h  MapList.h  Minimax.cpp  Minimax.h  Negamax.cpp  Negamax.h  Random.cpp  StartPosList.h  State.cpp  State.h  Store.cpp  Store.h  Utility.h  algolist.txt  gen_algolist.py  gen_maplist.py  gen_startposlist.py  main.cpp  maplist.txt
algo/granitestate/: babyblue.cpp  babyblue.h  constant.h  estimate-shield-val.cpp  estimate-shield-val.h  gen_maplist.py  heisenberg.cpp  heisenberg.h  heuristic.cpp  heuristic.h  main.cpp  map.cpp  map.h  maplist.h  maplist.txt  minimax.cpp  minimax.h  random.h  ship.h
algo/heisenberg/: main.cpp
algo/oh-my-blue/: Constants.h  Heuristic.cpp  Heuristic.h  Minimax.cpp  Minimax.h  Random.h  State.cpp  State.h  Store.cpp  Store.h  Utility.cpp  constant.h  heuristic.cpp  heuristic.h  main.cpp  minimax.cpp  minimax.h  state.cpp  state.h  store.cpp  store.h
algo/omegastay/: Constants.h  Engine.cpp  Engine.h  Heuristic.cpp  Heuristic.h  MCTS.cpp  MCTS.h  Negamax.cpp  Negamax.h  README.md  Random.cpp  Random.h  State.cpp  State.h  Store.cpp  Store.h  Utility.cpp  Utility.h  main.cpp
algo/pinkman/: heuristic.cpp  heuristic.h  main.cpp  main.h  map.cpp  map.h  minimax.cpp  minimax.h  random.cpp  random.h  ship.cpp  ship.h
algo/random/: main.cpp
algo/tahp/: dont-care-opponent-old.cpp  dont-care-opponent-v2.cpp  dont-care-opponent.cpp  v2-estimate-shield-val.cpp
algo/tahp-estimate-shield-val/: main.cpp
algo/tahp-ignore-opponent/: main.cpp
algo/tahp-ignore-opponent-v2/: main.cpp
algo/zhong/: main.cpp
judge/: judge.py  match.py  run.py  run_many.py  sandbox.py  sea_map.py  utility.py  validate_map.py  visualization.py  visualize_map.py
map/: gen.cpp  list.txt  map_01.txt  map_02.txt  map_03.txt  map_04.txt  map_05.txt  map_06.txt  map_08.txt  map_09.txt  map_21.txt  map_23.txt  map_26.txt  map_28.txt  map_34.txt  sample.txt
maps/: check_duplicate.py  list_official.txt  list_random.txt  list_semifinal.txt  visualize_all.py
maps/official/: map_11.txt  map_12.txt  map_13.txt  map_14.txt  map_15.txt  map_16.txt  map_17.txt  map_18.txt  map_19.txt  map_20.txt  map_21.txt  map_22.txt  map_24.txt  map_25.txt  map_29.txt  map_30.txt  map_31.txt  map_32.txt  map_33.txt  map_34.txt  map_35.txt
maps/random/: gen.cpp  gen_old.cpp  map_01.txt  map_02.txt  map_03.txt  map_04.txt  map_05.txt  map_06.txt  map_07.txt  map_08.txt  map_09.txt  map_10.txt  map_11.txt  map_12.txt  map_13.txt  map_14.txt  map_15.txt  map_16.txt  map_17.txt  map_18.txt  map_19.txt  map_20.txt  map_21.txt  run_gen.sh
maps/semifinal/: map_01.txt  map_07.txt  map_10.txt  map_11.txt  map_12.txt  map_15.txt  map_21.txt  map_23.txt  map_26.txt  map_27.txt  map_28.txt  map_31.txt  map_34.txt
renamed/: README.md
results/: babyblue_vs_heisenberg.txt  babyblue_vs_renamed.txt  babyblue_vs_tahp.txt  babyblue_vs_zhong.txt  felina_vs_babyblue.txt  felina_vs_granitestate.txt  felina_vs_heisenberg.txt  felina_vs_ohmyblue.txt  felina_vs_omegastay.txt  felina_vs_renamed.txt  felina_vs_tahp.txt  felina_vs_zhong.txt  granitestate_vs_babyblue.txt  granitestate_vs_heisenberg.txt  granitestate_vs_renamed.txt  granitestate_vs_tahp.txt  granitestate_vs_zhong.txt  heisenberg_vs_renamed.txt  heisenberg_vs_tahp.txt  heisenberg_vs_zhong.txt  ohmyblue_vs_babyblue.txt  ohmyblue_vs_granitestate.txt  ohmyblue_vs_heisenberg.txt  ohmyblue_vs_renamed.txt  ohmyblue_vs_tahp.txt  ohmyblue_vs_zhong.txt  omegastay_vs_babyblue.txt  omegastay_vs_granitestate.txt  omegastay_vs_heisenberg.txt  omegastay_vs_ohmyblue.txt  omegastay_vs_renamed.txt  omegastay_vs_tahp.txt  omegastay_vs_zhong.txt
